--- a/css/st-common.css
+++ b/css/st-common.css
@@ -4,6 +4,7 @@ body {
 .ui.form div input {
 	width: auto !important;
 }
+/* placeholder */
 ::placeholder { 
 	color: gray !important;
 	opacity: 0.5 !important; /* Firefox */
@@ -15,4 +16,81 @@ body {
 ::-ms-input-placeholder { /* Microsoft Edge */
 	color: gray !important;
 	opacity: 0.5 !important;
+}
+/* tooltip */
+.info-icon {
+	position: relative;
+	cursor: pointer;
+	background: #606060;
+	color: white;
+	font-size: 12px;
+	font-weight: bolder;
+	border-radius: 1em;
+	padding: 0 0.5em;
+}
+.tooltip {
+	position: relative;
+}
+.tooltip:hover .tooltip-inner {
+	visibility: visible;
+	opacity: .9;
+}
+.tooltip .tooltip-inner {
+	position: absolute;
+	display: block;
+	text-align: left;
+	text-decoration: none;
+	font-size: small;
+	font-family: monospace;
+	left: 10px;
+	padding: 0px 0px 2px 4px;
+	min-width: 150px;
+	max-width: 200px;
+	color: #ffffff;
+	background-color: #606060;
+	border: 2px solid #585858;
+	-webkit-border-radius: 4px;
+	border-radius: 4px;
+	visibility: hidden;
+	opacity: 0;
+	-webkit-transition: opacity .6s ease-in-out;
+	z-index: 10;
+}
+.tooltip.top .tooltip-inner {
+	bottom: 32px;
+}
+.tooltip.bottom .tooltip-inner {
+	margin-top: 8px;
+}
+.tooltip-angle {
+	position: absolute;
+	border-left-width: 0;
+	line-height: 0;
+	left: 0%;
+}
+.tooltip-angle-inner {
+	position: absolute;
+	border-left-width: 0;
+	line-height: 0;
+	left: 2px;
+}
+.tooltip.top .tooltip-angle {
+	bottom: -10px;
+	border-right: solid 10px transparent;
+	border-top: solid 10px #585858;
+}
+.tooltip.top .tooltip-angle-inner {
+	bottom: 5px;
+	border-right: solid 5px transparent;
+	border-top: solid 5px #606060;
+}
+.tooltip.bottom .tooltip-angle {
+	top: -10px;
+	border-right: solid 10px transparent;
+	border-bottom: solid 10px #585858;
+}
+.tooltip.bottom .tooltip-angle-inner {
+	top: 5px;
+	border-right: solid 5px transparent;
+	border-bottom: solid 5px #606060;
 }
